# Fitomi_Assist_AI_Cobot

./: README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: TaskCommand.action
src/custom_interfaces/msg/: InferenceResult.msg
src/custom_interfaces/srv/: ImgLoad.srv  LogMessage.srv  TaskCommand.srv
src/fitomi/: package.xml  setup.cfg  setup.py
src/fitomi/fitomi/: MicController.py  config.py  context_manager.py  dummy_flask.py  dummy_task_manager.py  knowledge_utils.py  llm_query.py  motion.py  prompt_manager.py  task_manager.py  tts.py  vad_audio.py  wakeup_word.py
src/fitomi/fitomi/object_detection/: img_display.py  object_detect.py  yolov8_obj_det_obb.py
src/fitomi/fitomi/resource/: .env
src/fitomi/fitomi/test/: test_api.py  test_multimodal.py  test_multimodal_images.py  test_rag .py
src/fitomi/resource/: T_gripper2camera.npy  class_name_tool.json  dummy_clothes.json  dummy_fridge_scan_result.json  outfit_knowledge.json  pose_data.json  weather_sample.json
src/fitomi/resource/vectorstore/clothing/: chroma.sqlite3
src/fitomi/resource/vectorstore/food/: chroma.sqlite3
src/fitomi/resource/vectorstore/processed/: chroma.sqlite3
src/fitomi_flask/: fitomi_flask.py  users.db
src/fitomi_flask/templates/: dashboard.html  dashboard_origin.html  my_confirm_register.html  my_login.html  my_login_origin.html
